chore: build management and CI